--- a/TODO
+++ b/TODO
@@ -51,6 +51,7 @@ Curent focus (top priority *):
     -use "freedesktop.org" specs for .cfg (ie XDG_*)
 
 In a day:
+    -code: many S52_drawStr() params could be drawn from inside S52_drawLast()
     -code: static global variable should all be inside a context struct .. of course!
     -GL: save display list / VBO(somehow!)
     -S52: use masked lines field (S57 MASK/FSPT)
