--- a/TODO
+++ b/TODO
@@ -26,7 +26,7 @@ Curent focus (top priority *):
     -isobath tag
 
     Coding:
-*   -use masked lines field (OGR/S57 MASK/FSPT) to split line in multi-line or line overlap trick
+*   -use masked lines field (OGR/S57 MASK/FSPT) to use the line overlap trick
 *   -chart manager / show world contour / chart extent / CATALOG.031
     -check handling anti-meridian (need a chart that overlap the meridian to debug)
     -check CRC32 in S57
