--- a/TODO
+++ b/TODO
@@ -7,7 +7,6 @@ Last update:
 Curent focus (top priority *):
 
     GL:
-**  -load raster (RADAR Layer, high densit bathy, ice)
 **  -alarm (safety perimeter, x-track!), try the GL cursor pick trick and GL diamond rule for 9x9 pixels
 *   -handle overlaping symbol at the center of the screen (no test case to debug)
     -fading chart boudary, calib symb, ..
@@ -26,7 +25,7 @@ Curent focus (top priority *):
 
     Coding:
 *   -use masked lines field (OGR/S57 MASK/FSPT) to use the line overlap trick
-*   -chart manager / show world contour / chart extent / CATALOG.031
+*   -chart manager / chart extent / CATALOG.031
     -check handling anti-meridian (need a chart that overlap the meridian to debug)
     -check CRC32 in S57
     -read text referenced by CATLOG.031 (some text in M_NPUB also)
@@ -58,6 +57,7 @@ DONE
 ====
 (put here TODO's that has been done)
 
+    -load raster (RADAR Layer, high density bathy,...)
     -signal object that land in layer 0 (ex TOPMAR/CA49995A.000/geo.id:123)
     -handle C_AGGR and C_ASSO to showup in crusor pick (2 - slave, 3 - peer, need to hack GDAL TEMP_BUFFER_SIZE)
     -display text description of symbol in PLib in cursor pick
