--- a/TODO
+++ b/TODO
@@ -27,9 +27,8 @@ Curent focus (top priority *):
 *   -use masked lines field (OGR/S57 MASK/FSPT) to use the line overlap trick
 *   -chart manager / chart extent / CATALOG.031
     -check handling anti-meridian (need a chart that overlap the meridian to debug)
-    -check CRC32 in S57
-    -read text referenced by CATLOG.031 (some text in M_NPUB also)
-    -check user (if root warn & exit)
+    -check CRC32 of S57 in CATALOG.031
+    -read text referenced by CATALOG.031 (some text in M_NPUB also)
     -write back mariner's parameter to .cfg (client job!)
     -use the glib "Key-value file parser" to load/save .cfg
     -use "freedesktop.org" specs for .cfg (ie XDG_*)
@@ -56,6 +55,7 @@ DONE
 ====
 (put here TODO's that has been done)
 
+    -check user (if root warn & exit)
     -load raster (RADAR Layer, high density bathy,...)
     -signal object that land in layer 0 (ex TOPMAR/CA49995A.000/geo.id:123)
     -handle C_AGGR and C_ASSO to showup in crusor pick (2 - slave, 3 - peer, need to hack GDAL TEMP_BUFFER_SIZE)
