--- a/TODO
+++ b/TODO
@@ -8,7 +8,7 @@ Curent focus (top priority *):
 
     GL:
 **  -alarm (safety perimeter, x-track!), try the GL cursor pick trick and GL diamond rule for 9x9 pixels
-*   -handle overlaping symbol at the center of the screen (no test case to debug)
+*   -handle overlaping symbol at the center of the screen (find test case to debug)
     -fading chart boudary, calib symb, ..
     -implement patern scale spacing (PASP field)
     -handle GLU_TESS_MAX_COORD
@@ -26,12 +26,10 @@ Curent focus (top priority *):
     Coding:
 *   -use masked lines field (OGR/S57 MASK/FSPT) to use the line overlap trick
 *   -chart manager / chart extent / CATALOG.031
-    -check handling anti-meridian (need a chart that overlap the meridian to debug)
     -check CRC32 of S57 in CATALOG.031
     -read text referenced by CATALOG.031 (some text in M_NPUB also)
     -write back mariner's parameter to .cfg (client job!)
     -use the glib "Key-value file parser" to load/save .cfg
-    -use "freedesktop.org" specs for .cfg (ie XDG_*)
 
     Testing:
     -apitrace: to record gl*() calls / playback / diff / optimisation
@@ -40,7 +38,6 @@ In a day:
     -libgdal.a: full build is heavy, build only with the final driver set (S57, PNG, shapefile)
     -code: static global variable should all be inside a context struct .. of course!
     -BUG: S-52 specs 3.2 for TOPMAR01 (init 'floating' inside loop)
-    -WARN: chart no 1 PLib put $LINE in layer 0
     -OGR: IHOOCDD.XXX
     -GL: display 'dipping distance' of light (need the height of eye and sea level)
     -GL: bearing snap to light
@@ -55,6 +52,8 @@ DONE
 ====
 (put here TODO's that has been done)
 
+    -WARN: chart no 1 PLib put $LINE in layer 0
+    -check handling anti-meridian (need a chart that overlap the meridian to debug)
     -check user (if root warn & exit)
     -load raster (RADAR Layer, high density bathy,...)
     -signal object that land in layer 0 (ex TOPMAR/CA49995A.000/geo.id:123)
